added metadata handling
